fixed issue with "pre-rendering background painting", ignoring dark mode status

--- a/css/common.css
+++ b/css/common.css
@@ -15,8 +15,8 @@
 body.dark-mode {
   --background-color: #2a2a2a;
   --text-color: #f0f0f0;
-  --highlight-color: #6ba529;
-  --unnumbered-highlight-color: #ff7043;
+  --highlight-color: #517d20;
+  --unnumbered-highlight-color: #954329;
   --footer-bg-color: #3f3f3f;
   --footer-text-color: #ddd;
   --link-color: #89b4fa;        /* soft blue for dark background */
